# wordpractice2

./: .dockerignore  .env.example  .gitignore  .isort.cfg  .prettierignore  Dockerfile  README.md  badges.py  bot.py  config.py  constants.py  docker-compose.yml  icons.py  main.py  pyproject.toml  requirements.txt  roles.py
.github/workflows/: docker-image.yml  python-app.yml
achievements/: __init__.py  badges.py  base.py  beginning.py  challenges.py  endurance.py  season.py  speed.py  typing.py
challenges/: achievements.py  badges.py  base.py  beginning.py  daily.py  endurance.py  rewards.py  season.py  typing.py
cogs/: bot.py  events.py  misc.py  mongo.py  owner.py
cogs/cmds/: misc.py  owner.py
cogs/discord/: bot.py  customization.py  events.py  misc.py  moderator.py  redis.py  server.py  tasks.py  typing.py
cogs/events/: events.py
cogs/utils/: logging.py  mongo.py  redis.py
data/: constants.py  icons.py
emojis/: README.md
helpers/: checks.py  converters.py  errors.py  image.py  ui.py  user.py  utils.py
static/: achievements.py  badges.py  hints.py  themes.json  themes.py
static/assets/: __init__.py
word_list/: README.md  __init__.py  quotes.json
word_list/arabic/: arabic.json  arabic_10k.json
word_list/bengali/: begali_1k.json  bengali_1k.json
word_list/danish/: danish.json  danish_10k.json  danish_1k.json
word_list/english/: english.json  english150k.json  english_10k.json  english_1k.json
word_list/filipino/: filipino.json  filipino_1k.json
word_list/french/: french.json  french_10k.json  french_1k.json
(+29 files in other folders)
