[tool.poetry]
name = "wordPractice"
version = "2.0.0"
description = "The typing test Discord bot."
authors = ["principle105"]

[tool.poetry.dependencies]
python = "^3.9"
umongo = {extras = ["motor"], version = "^3.0.1"}
motor = "^2.5.1"
dnspython = "^2.1.0"
certifi = "^2021.10.8"
humanfriendly = "^10.0"
Pillow = "^8.4.0"
humanize = "^4.0.0"
numpy = "^1.22.3"
captcha = "^0.4"
python-decouple = "^3.6"
py-cord = "2.0.0rc1"
async-cache = "^1.1.1"
cryptography = "^37.0.2"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "22.3.0"

[tool.isort]
multi_line_output = 3
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"